force-app/main/default/objects/cgcloud__Tour_Object_Reference__c/cgcloud__Tour_Object_Reference__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the object references of a tour.</description>
    <label>Tour Object Reference</label>
    <nameField>
        <displayFormat>TOR-{000000}</displayFormat>
        <label>Tour Object Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Object References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>