force-app/main/default/objects/cgcloud__Tour_Object_Reference__c/fields/cgcloud__End_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Of_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of Day</label>
    <type>Checkbox</type>
</CustomField>