force-app/main/default/objects/cgcloud__Tour_Object_Reference__c/fields/cgcloud__Tour__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour__c</fullName>
    <label>Tour</label>
    <referenceTo>cgcloud__Tour__c</referenceTo>
    <relationshipLabel>Tour Object References</relationshipLabel>
    <relationshipName>Tour_Object_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>