force-app/main/default/objects/cgcloud__Tour_Object_Reference__c/fields/cgcloud__Usage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage__c</fullName>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SdoMeta.ProductCheckOut</fullName>
            </value>
            <value>
                <fullName>SdoMeta.ProductCheckIn</fullName>
            </value>
            <value>
                <fullName>SdoMeta.TruckInventory</fullName>
            </value>
            <value>
                <fullName>SdoMeta.TruckAudit</fullName>
            </value>
            <value>
                <fullName>SdoMeta.ForcedTruckAudit</fullName>
            </value>
            <value>
                <fullName>SdoMeta.TckIvcTransferOutward</fullName>
            </value>
            <value>
                <fullName>SdoMeta.TckIvcAddCorrection</fullName>
            </value>
            <value>
                <fullName>SdoMeta.TckIvcTransferInward</fullName>
            </value>
            <value>
                <fullName>SdoMeta.TckIvcSubCorrection</fullName>
            </value>
            <value>
                <fullName>TmgMain.StartOfDay</fullName>
            </value>
            <value>
                <fullName>TmgMain.EndOfDay</fullName>
            </value>
            <value>
                <fullName>SdoMeta.CashCheckOut</fullName>
            </value>
            <value>
                <fullName>SdoMeta.CashCheckIn</fullName>
            </value>
            <value>
                <fullName>SdoMeta.Expenses</fullName>
            </value>
            <value>
                <fullName>SdoMeta.Payments</fullName>
            </value>
            <value>
                <fullName>SdoMeta.CashCheck</fullName>
            </value>
            <value>
                <fullName>SdoMeta.Order</fullName>
            </value>
            <value>
                <fullName>ClbMeta.Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>