force-app/main/default/objects/cgcloud__Tour_Object_Reference__c/fields/cgcloud__Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Template</label>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>Tour Object References</relationshipLabel>
    <relationshipName>Tour_Object_References</relationshipName>
    <type>Lookup</type>
</CustomField>